# projeto-heroku

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_perfil.py  0003_delete_perfil.py  0004_alter_lista_produto.py  0005_alter_mercado_avaliacao.py  0006_alter_lista_produto_alter_mercado_avaliacao.py  0007_alter_produto_mercado.py  0008_alter_produto_mercado.py
lista/: settings.py  urls.py
