[tool.poetry]
name = "projeto-heroku"
version = "0.1.0"
description = ""
authors = ["plinio"]
readme = "README.md"
packages = [{include = "projeto_heroku"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.3"
django-rest-framework = "^0.1.0"
django-cors-headers = "^3.13.0"
djangorestframework-simplejwt = "^5.2.2"
drf-spectacular = "^0.24.2"
python-magic = "^0.4.27"
pillow = "^9.3.0"
django-rest-auth = "^0.9.5"
dj-rest-auth = {extras = ["with-social"], version = "^2.2.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
